<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">줍줍</string>
	<string name="menu_settings">Settings</string>
	<string name="str_done">완료</string>
	<string name="re_mylocation">내 위치찾기</string>
	<string name="open_drawer">Open</string>
	<string name="close_drawer">Close</string>
    <string name="store_msg">업체등록을 위한 페이지입니다. \n내용을 입력해주시면 1~2일 후 업데이트 됩니다.</string>
    <string name="store_name">업체이름 :</string>
    <string name="store_addr">주&#160;&#160;&#160;&#160;&#160;&#160;&#160;소&#160;:</string>
    <string name="store_phone">전화번호 :</string>
    <string name="coupon">쿠폰내용 : </string>
    <string name="regist_btn">등록</string>
</resources>
